# AI_Doc_Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  chainlit.md  pyproject.toml  requirements.txt
.chainlit/: config.toml
public/: ask-file-in-plane-cancel.js  hide-readme.css
src/: chat.py  config.py  document_loader.py  embeddings.py  qa.py
tests/: conftest.py  test_document_loader.py  test_document_loader_formats.py  test_qa.py
